fixes order line problems which intermittently results in 404.